@@ -12,6 +12,7 @@ v0.10.0 (WIP):
 
     BUGFIX: Editor: Don't call Reasume/Suspend on invisible canvas (#255)
 
+    BUGFIX: Canvas: Remember index of first command buffer to not miss updating any used (#260)
 
 v0.9.2 (2023-09-01):
 
